--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@risasoft/delegation-dashboard",
   "description": "Risa Staking",
   "version": "0.1.2",
-  "author": "@risasoftstaking",
+  "author": "@risa_staking",
   "license": "GPL-3.0-or-later",
   "repository": "@risasoft/delegation-dashboard",
   "type": "module",
