--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Risa Staking",
-  "short_name": "@risasoftstaking",
+  "short_name": "@risa_staking",
   "icons": [
     {
       "src": "android-chrome-192x192.png",
