fix: BLS signer for add nodes

--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "scripts": {
     "start": "parcel public/index.html",
-    "start-testnet": "npm run copy-testnet-config && npm start",
+    "start-testnet": "yarn copy-testnet-config && yarn start",
     "build": "parcel build public/index.html",
-    "build-testnet": "npm run copy-testnet-config && npm run build",
-    "build-mainnet": "npm run copy-mainnet-config && npm run build",
+    "build-testnet": "yarn copy-testnet-config && yarn build",
+    "build-mainnet": "yarn copy-mainnet-config && yarn build",
     "test": "node scripts/test.js",
-    "copy-wasm": "mkdir dist && mkdir ./dist/node_modules && mkdir ./dist/node_modules/@elrondnetwork && mkdir ./dist/node_modules/@elrondnetwork/bls-wasm && cp ./public/bls_c.wasm ./dist/node_modules/@elrondnetwork/bls-wasm/ && cp ./public/bls_c.wasm ./dist && cp ./public/.htaccess ./dist",
-    "copy-testnet-config": "npm run copy-wasm && cp ./src/config.testnet.ts ./src/config.ts",
-    "copy-mainnet-config": "npm run copy-wasm && cp ./src/config.mainnet.ts ./src/config.ts",
+    "copy-wasm": "mkdir dist && mkdir ./dist/node_modules && mkdir ./dist/node_modules/@multiversx && mkdir ./dist/node_modules/@multiversx/sdk-bls-wasm && cp ./public/bls_c.wasm ./dist/node_modules/@multiversx/sdk-bls-wasm/ && cp ./public/bls_c.wasm ./dist && cp ./public/.htaccess ./dist",
+    "copy-testnet-config": "yarn copy-wasm && cp ./src/config.testnet.ts ./src/config.ts",
+    "copy-mainnet-config": "yarn copy-wasm && cp ./src/config.mainnet.ts ./src/config.ts",
     "clean": "rm -rf ./dist",
     "lint": "eslint --ext js,ts,tsx src --fix"
   },
@@ -81,10 +81,10 @@
   },
   "dependencies": {
     "@fortawesome/free-regular-svg-icons": "6.2.1",
-    "@multiversx/sdk-bls-wasm": "0.3.5",
     "@multiversx/sdk-core": "11.4.0",
     "@multiversx/sdk-dapp": "2.9.2",
     "@multiversx/sdk-network-providers": "1.3.0",
+    "@multiversx/sdk-wallet": "^3.0.0",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "11.1.0",
     "@testing-library/user-event": "12.8.3",
@@ -98,7 +98,7 @@
     "dayjs": "^1.11.7",
     "formik": "2.2.9",
     "moment": "2.29.4",
-    "parcel": "2.8.2",
+    "parcel": "2.8.3",
     "react": "18.2.0",
     "react-bootstrap": "1.6.6",
     "react-dom": "18.2.0",
@@ -114,9 +114,9 @@
     "yup": "0.32.11"
   },
   "devDependencies": {
-    "@parcel/packager-raw-url": "2.8.2",
-    "@parcel/transformer-sass": "2.8.2",
-    "@parcel/transformer-webmanifest": "2.8.2",
+    "@parcel/packager-raw-url": "2.8.3",
+    "@parcel/transformer-sass": "2.8.3",
+    "@parcel/transformer-webmanifest": "2.8.3",
     "@types/qrcode": "1.5.0",
     "@typescript-eslint/eslint-plugin": "5.40.0",
     "@typescript-eslint/parser": "5.40.0",
