--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
     "@types/react-router-dom": "5.3.3",
     "axios": "0.27.2",
     "bootstrap": "5.2.2",
-    "dayjs": "^1.11.7",
+    "dayjs": "1.11.7",
     "formik": "2.2.9",
     "moment": "2.29.4",
     "parcel": "2.8.3",
