--- a/package.json
+++ b/package.json
@@ -81,8 +81,8 @@
   },
   "dependencies": {
     "@fortawesome/free-regular-svg-icons": "6.2.1",
-    "@multiversx/sdk-core": "11.4.0",
-    "@multiversx/sdk-dapp": "2.9.2",
+    "@multiversx/sdk-core": "11.4.1",
+    "@multiversx/sdk-dapp": "2.10.6",
     "@multiversx/sdk-network-providers": "1.3.0",
     "@multiversx/sdk-wallet": "^3.0.0",
     "@testing-library/jest-dom": "5.16.5",
@@ -95,7 +95,7 @@
     "@types/react-router-dom": "5.3.3",
     "axios": "0.27.2",
     "bootstrap": "5.2.2",
-    "dayjs": "^1.11.7",
+    "dayjs": "1.11.7",
     "formik": "2.2.9",
     "moment": "2.29.4",
     "parcel": "2.8.3",
