--- a/package.json
+++ b/package.json
@@ -81,10 +81,10 @@
   },
   "dependencies": {
     "@fortawesome/free-regular-svg-icons": "6.2.1",
-    "@multiversx/sdk-core": "11.4.1",
-    "@multiversx/sdk-dapp": "2.10.6",
+    "@multiversx/sdk-core": "11.6.0",
+    "@multiversx/sdk-dapp": "2.10.17",
     "@multiversx/sdk-network-providers": "1.3.0",
-    "@multiversx/sdk-wallet": "^3.0.0",
+    "@multiversx/sdk-wallet": "4.0.0",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "11.1.0",
     "@testing-library/user-event": "12.8.3",
@@ -93,8 +93,8 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "@types/react-router-dom": "5.3.3",
-    "axios": "0.27.2",
-    "bootstrap": "5.2.2",
+    "axios": "1.3.5",
+    "bootstrap": "5.1.3",
     "dayjs": "1.11.7",
     "formik": "2.2.9",
     "moment": "2.29.4",
@@ -106,10 +106,10 @@
     "react-router-dom": "6.8.0",
     "react-scripts": "5.0.1",
     "redux": "4.2.1",
-    "sass": "1.58.0",
+    "sass": "1.61.0",
     "sharp": "0.31.3",
     "shx": "0.3.4",
-    "typescript": "4.9.5",
+    "typescript": "5.0.3",
     "web-vitals": "3.1.1",
     "yup": "0.32.11"
   },
@@ -120,9 +120,9 @@
     "@types/qrcode": "1.5.0",
     "@typescript-eslint/eslint-plugin": "5.40.0",
     "@typescript-eslint/parser": "5.40.0",
-    "buffer": "^5.5.0",
-    "crypto-browserify": "^3.12.0",
-    "eslint-config-prettier": "8.5.0",
+    "buffer": "6.0.3",
+    "crypto-browserify": "3.12.0",
+    "eslint-config-prettier": "8.8.0",
     "eslint-config-react": "1.1.7",
     "eslint-config-react-app": "7.0.1",
     "eslint-config-standard": "17.0.0",
@@ -134,10 +134,10 @@
     "eslint-plugin-promise": "6.0.1",
     "eslint-plugin-react": "7.31.10",
     "eslint-plugin-react-hooks": "4.6.0",
-    "path-browserify": "^1.0.0",
+    "path-browserify": "1.0.1",
     "prettier": "2.7.1",
-    "process": "^0.11.10",
-    "punycode": "^1.4.1",
-    "stream-browserify": "^3.0.0"
+    "process": "0.11.10",
+    "punycode": "2.3.0",
+    "stream-browserify": "3.0.0"
   }
 }
