--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
     "dayjs": "1.11.7",
     "formik": "2.2.9",
     "moment": "2.29.4",
-    "parcel": "2.8.1",
+    "parcel": "2.8.2",
     "react": "18.2.0",
     "react-bootstrap": "1.6.6",
     "react-dom": "18.2.0",
@@ -107,16 +107,16 @@
     "react-scripts": "5.0.1",
     "redux": "4.2.1",
     "sass": "1.61.0",
-    "sharp": "0.31.3",
+    "sharp": "0.31.1",
     "shx": "0.3.4",
     "typescript": "5.0.3",
-    "web-vitals": "3.1.1",
+    "web-vitals": "3.3.1",
     "yup": "0.32.11"
   },
   "devDependencies": {
-    "@parcel/packager-raw-url": "2.8.1",
-    "@parcel/transformer-sass": "2.8.1",
-    "@parcel/transformer-webmanifest": "2.8.1",
+    "@parcel/packager-raw-url": "2.8.2",
+    "@parcel/transformer-sass": "2.8.2",
+    "@parcel/transformer-webmanifest": "2.8.2",
     "@types/qrcode": "1.5.0",
     "@typescript-eslint/eslint-plugin": "5.40.0",
     "@typescript-eslint/parser": "5.40.0",
@@ -134,10 +134,10 @@
     "eslint-plugin-promise": "6.0.1",
     "eslint-plugin-react": "7.31.10",
     "eslint-plugin-react-hooks": "4.6.0",
-    "path-browserify": "1.0.1",
+    "path-browserify": "^1.0.0",
     "prettier": "2.7.1",
     "process": "0.11.10",
     "punycode": "^1.4.1",
-    "stream-browserify": "3.0.0"
+    "stream-browserify": "^3.0.0"
   }
 }
