update yarn and packages

--- a/package.json
+++ b/package.json
@@ -89,7 +89,6 @@
     "@testing-library/react": "11.1.0",
     "@testing-library/user-event": "12.8.3",
     "@types/jest": "26.0.24",
-    "@types/node": "16.11.65",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "@types/react-router-dom": "5.3.3",
@@ -100,13 +99,12 @@
     "dayjs": "1.11.7",
     "formik": "2.2.9",
     "moment": "2.29.4",
-    "parcel": "2.8.2",
+    "parcel": "2.8.3",
     "react": "18.2.0",
     "react-bootstrap": "1.6.6",
     "react-dom": "18.2.0",
     "react-dropzone": "14.2.3",
     "react-router-dom": "6.8.0",
-    "react-scripts": "5.0.1",
     "redux": "4.2.1",
     "sass": "1.61.0",
     "sharp": "0.31.1",
@@ -116,9 +114,10 @@
     "yup": "0.32.11"
   },
   "devDependencies": {
-    "@parcel/packager-raw-url": "2.8.2",
-    "@parcel/transformer-sass": "2.8.2",
-    "@parcel/transformer-webmanifest": "2.8.2",
+    "@parcel/packager-raw-url": "2.8.3",
+    "@parcel/transformer-sass": "2.8.3",
+    "@parcel/transformer-webmanifest": "2.8.3",
+    "@types/node": "^18.15.11",
     "@types/qrcode": "1.5.0",
     "@typescript-eslint/eslint-plugin": "5.40.0",
     "@typescript-eslint/parser": "5.40.0",
