--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "start": "parcel public/index.html",
     "start-testnet": "yarn copy-testnet-config && yarn start",
-    "build": "parcel build public/index.html",
+    "build": "NODE_ENV=development && parcel build public/index.html",
     "build-testnet": "yarn copy-testnet-config && yarn build",
     "build-mainnet": "yarn copy-mainnet-config && yarn build",
     "test": "node scripts/test.js",
