--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "start": "parcel public/index.html",
     "start-testnet": "yarn copy-testnet-config && yarn start",
-    "build": "parcel build public/index.html",
+    "build": "parcel build public/index.html --no-scope-hoist",
     "build-testnet": "yarn copy-testnet-config && yarn build",
     "build-mainnet": "yarn copy-mainnet-config && yarn build",
     "test": "node scripts/test.js",
@@ -81,19 +81,18 @@
   },
   "dependencies": {
     "@fortawesome/free-regular-svg-icons": "6.2.1",
-    "@multiversx/sdk-core": "11.4.1",
-    "@multiversx/sdk-dapp": "2.10.6",
+    "@multiversx/sdk-core": "11.6.0",
+    "@multiversx/sdk-dapp": "2.10.17",
     "@multiversx/sdk-network-providers": "1.3.0",
-    "@multiversx/sdk-wallet": "^3.0.0",
+    "@multiversx/sdk-wallet": "4.0.0",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "11.1.0",
     "@testing-library/user-event": "12.8.3",
     "@types/jest": "26.0.24",
-    "@types/node": "16.11.65",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "@types/react-router-dom": "5.3.3",
-    "axios": "0.27.2",
+    "axios": "1.3.5",
     "bootstrap": "5.2.2",
     "dayjs": "1.11.7",
     "formik": "2.2.9",
@@ -104,25 +103,25 @@
     "react-dom": "18.2.0",
     "react-dropzone": "14.2.3",
     "react-router-dom": "6.8.0",
-    "react-scripts": "5.0.1",
     "redux": "4.2.1",
-    "sass": "1.58.0",
-    "sharp": "0.31.3",
+    "sass": "1.61.0",
+    "sharp": "0.31.1",
     "shx": "0.3.4",
-    "typescript": "4.9.5",
-    "web-vitals": "3.1.1",
+    "typescript": "5.0.3",
+    "web-vitals": "3.3.1",
     "yup": "0.32.11"
   },
   "devDependencies": {
     "@parcel/packager-raw-url": "2.8.3",
     "@parcel/transformer-sass": "2.8.3",
     "@parcel/transformer-webmanifest": "2.8.3",
+    "@types/node": "^18.15.11",
     "@types/qrcode": "1.5.0",
     "@typescript-eslint/eslint-plugin": "5.40.0",
     "@typescript-eslint/parser": "5.40.0",
-    "buffer": "^5.5.0",
-    "crypto-browserify": "^3.12.0",
-    "eslint-config-prettier": "8.5.0",
+    "buffer": "6.0.3",
+    "crypto-browserify": "3.12.0",
+    "eslint-config-prettier": "8.8.0",
     "eslint-config-react": "1.1.7",
     "eslint-config-react-app": "7.0.1",
     "eslint-config-standard": "17.0.0",
@@ -136,7 +135,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "path-browserify": "^1.0.0",
     "prettier": "2.7.1",
-    "process": "^0.11.10",
+    "process": "0.11.10",
     "punycode": "^1.4.1",
     "stream-browserify": "^3.0.0"
   }
