--- a/package.json
+++ b/package.json
@@ -81,9 +81,9 @@
   },
   "dependencies": {
     "@fortawesome/free-regular-svg-icons": "6.2.1",
-    "@multiversx/sdk-core": "11.6.0",
-    "@multiversx/sdk-dapp": "2.10.17",
-    "@multiversx/sdk-network-providers": "1.3.0",
+    "@multiversx/sdk-core": "12.1.1",
+    "@multiversx/sdk-dapp": "2.11.3",
+    "@multiversx/sdk-network-providers": "1.4.0",
     "@multiversx/sdk-wallet": "4.0.0",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "11.1.0",
@@ -94,6 +94,7 @@
     "@types/react-router-dom": "5.3.3",
     "axios": "1.3.5",
     "bootstrap": "5.2.2",
+    "buffer": "^6.0.3",
     "dayjs": "1.11.7",
     "formik": "2.2.9",
     "moment": "2.29.4",
@@ -115,12 +116,12 @@
     "@parcel/packager-raw-url": "2.8.3",
     "@parcel/transformer-sass": "2.8.3",
     "@parcel/transformer-webmanifest": "2.8.3",
-    "@types/node": "^18.15.11",
+    "@types/node": "^18.15.13",
     "@types/qrcode": "1.5.0",
     "@typescript-eslint/eslint-plugin": "5.40.0",
     "@typescript-eslint/parser": "5.40.0",
-    "buffer": "6.0.3",
     "crypto-browserify": "3.12.0",
+    "eslint": "^8.39.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-config-react": "1.1.7",
     "eslint-config-react-app": "7.0.1",
