--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
       "react-app/jest"
     ]
   },
+  "@parcel/resolver-default": {
+    "packageExports": true
+  },
   "jest": {
     "roots": [
       "<rootDir>/src"
@@ -80,11 +83,18 @@
     "resetMocks": true
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-regular-svg-icons": "6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@ledgerhq/devices": "^8.0.7",
     "@multiversx/sdk-core": "12.6.1",
     "@multiversx/sdk-dapp": "2.19.2",
     "@multiversx/sdk-network-providers": "1.5.0",
     "@multiversx/sdk-wallet": "4.2.0",
+    "@parcel/config-default": "^2.9.3",
+    "@parcel/core": "^2.9.3",
+    "@popperjs/core": "^2.11.8",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "11.1.0",
     "@testing-library/user-event": "12.8.3",
@@ -93,14 +103,15 @@
     "@types/react-dom": "18.0.10",
     "@types/react-router-dom": "5.3.3",
     "axios": "1.3.5",
-    "bootstrap": "5.2.2",
-    "buffer": "^6.0.3",
+    "bignumber.js": "^9.1.1",
+    "bootstrap": "5.3.1",
+    "buffer": "^5.5.0",
     "dayjs": "1.11.7",
     "formik": "2.2.9",
     "moment": "2.29.4",
-    "parcel": "2.8.3",
+    "parcel": "2.9.3",
     "react": "18.2.0",
-    "react-bootstrap": "1.6.6",
+    "react-bootstrap": "2.8.0",
     "react-dom": "18.2.0",
     "react-dropzone": "14.2.3",
     "react-router-dom": "6.8.0",
@@ -113,9 +124,9 @@
     "yup": "0.32.11"
   },
   "devDependencies": {
-    "@parcel/packager-raw-url": "2.8.3",
-    "@parcel/transformer-sass": "2.8.3",
-    "@parcel/transformer-webmanifest": "2.8.3",
+    "@parcel/packager-raw-url": "2.9.3",
+    "@parcel/transformer-sass": "2.9.3",
+    "@parcel/transformer-webmanifest": "2.9.3",
     "@types/node": "^18.15.13",
     "@types/qrcode": "1.5.0",
     "@typescript-eslint/eslint-plugin": "5.40.0",
@@ -134,10 +145,12 @@
     "eslint-plugin-promise": "6.0.1",
     "eslint-plugin-react": "7.31.10",
     "eslint-plugin-react-hooks": "4.6.0",
+    "events": "^3.1.0",
     "path-browserify": "^1.0.0",
     "prettier": "2.7.1",
     "process": "0.11.10",
     "punycode": "^1.4.1",
-    "stream-browserify": "^3.0.0"
+    "stream-browserify": "^3.0.0",
+    "string_decoder": "^1.3.0"
   }
 }
