WIP: bun conversion

--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   "type": "module",
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "scripts": {
-    "start": "parcel public/index.html",
+    "start": "bun run public/index.html",
     "start-testnet": "yarn copy-testnet-config && yarn start",
-    "build": "parcel build public/index.html --no-scope-hoist --no-source-maps",
-    "build-testnet": "yarn copy-testnet-config && yarn build",
-    "build-mainnet": "yarn copy-mainnet-config && yarn build",
+    "build": "bun build ./src/index.tsx --outdir ./dist",
+    "build-testnet": "yarn copy-testnet-config && bun run build",
+    "build-mainnet": "yarn copy-mainnet-config && bun run build",
     "test": "node scripts/test.js",
     "copy-wasm": "mkdir dist && cp ./public/bls_c.wasm ./dist && cp ./public/.htaccess ./dist && cp ./public/_redirects ./dist",
     "copy-testnet-config": "yarn copy-wasm && cp ./src/config.testnet.ts ./src/config.ts",
@@ -106,8 +106,10 @@
     "bignumber.js": "^9.1.1",
     "bootstrap": "5.3.1",
     "buffer": "^5.5.0",
+    "bun": "^1.0.0",
     "dayjs": "1.11.7",
     "formik": "2.2.9",
+    "lightningcss": "^1.19.0",
     "moment": "2.29.4",
     "parcel": "2.9.3",
     "react": "18.2.0",
@@ -116,7 +118,7 @@
     "react-dropzone": "14.2.3",
     "react-router-dom": "6.8.0",
     "redux": "4.2.1",
-    "sass": "1.61.0",
+    "sass": "1.63.2",
     "sharp": "0.31.1",
     "shx": "0.3.4",
     "typescript": "5.0.3",
