--- a/package.json
+++ b/package.json
@@ -87,10 +87,10 @@
     "@fortawesome/free-regular-svg-icons": "6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@ledgerhq/devices": "^8.0.7",
-    "@multiversx/sdk-core": "12.6.1",
-    "@multiversx/sdk-dapp": "2.19.2",
-    "@multiversx/sdk-network-providers": "1.5.0",
+    "@ledgerhq/devices": "8.2.0",
+    "@multiversx/sdk-core": "12.15.0",
+    "@multiversx/sdk-dapp": "2.24.4",
+    "@multiversx/sdk-network-providers": "2.2.0",
     "@multiversx/sdk-wallet": "4.2.0",
     "@parcel/config-default": "^2.9.3",
     "@parcel/core": "^2.9.3",
